--- a/.github/workflows/gh-rfcs-mdbook.yml
+++ b/.github/workflows/gh-rfcs-mdbook.yml
@@ -56,4 +56,4 @@ jobs:
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: ./book
-                  publich_branch: ${{ github.ref }}
+                  publich_branch: gh-pages
